--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,18 +6,19 @@ classifiers = [
   "License :: OSI Approved :: MIT License",
   "Programming Language :: Python :: 3 :: Only",
 ]
-description = "Core components of actfw, independent of specific devices"
+description = "actfw's additional components using GStreamer"
 keywords = ['actcast']
 license = "MIT"
-name = "actfw-core"
+name = "actfw-gstreamer"
 readme = "README.md"
-repository = "https://github.com/Idein/actfw-core"
-version = "1.5.2"
+repository = "https://github.com/Idein/actfw-gstreamer"
+version = "0.1.0a6"
 
 [tool.poetry.dependencies]
 python = "^3.6"
 
-Pillow = "^8.1.2"
+PyGObject = "^3.40.1"
+actfw-core = "^1.5.2"
 
 [tool.poetry.dev-dependencies]
 Sphinx = "^3.5.3"
@@ -27,11 +28,15 @@ sphinx-theme = "^1.0"
 
 [tool.pysen.lint]
 enable_black = true
-enable_flake8 = false # FIXME: too many warns/errors.
+enable_flake8 = true
 enable_isort = true
-enable_mypy = false
+enable_mypy = true
+mypy_preset = "strict"
 line_length = 128
 py_version = "py38"
+
+[[tool.pysen.lint.mypy_targets]]
+paths = ["."]
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
