--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ commands:
           command: |
             apt-get update
             apt-get install -y --no-install-recommends python3-pip
-            apt-get install -y --no-install-recommends libgstreamer1.0-dev libgirepository1.0-dev
+            apt-get install -y --no-install-recommends libgstreamer1.0-dev libgirepository1.0-dev gstreamer1.0-plugins-base
   poetry-install:
     steps:
       # See: https://circleci.com/docs/2.0/language-python/#cache-dependencies
