--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,9 +24,9 @@ result = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 Sphinx = "^3.5.3"
-nose2 = "^0.10.0"
 numpy = "^1.19"
 pysen = {version = "^0.9.1", extras = ["lint"]}
+pytest = "^6.2.3"
 sphinx-theme = "^1.0"
 
 [tool.pysen.lint]
