--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ python = "^3.6"
 
 Pillow = "^5"
 PyGObject = "^3.40.1"
-actfw-core = "^1.5.2"
+actfw-core = "2.0.0a0"
 result = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
