--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,11 @@ pysen = {version = "^0.9.1", extras = ["lint"]}
 pytest = "^6.2.3"
 sphinx-theme = "^1.0"
 
+[tool.poetry.urls]
+"Repository" = "https://github.com/Idein/actfw-gstreamer"
+"Documentation" = "https://idein.github.io/actfw-gstreamer/latest/"
+"Changelog" = "https://github.com/Idein/actfw-gstreamer/blob/master/CHANGELOG.md"
+
 [tool.pysen.lint]
 enable_black = true
 enable_flake8 = true
