poetry add --dev pyproject-indirect-import-detector

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ result = "^0.6.0"
 [tool.poetry.dev-dependencies]
 Sphinx = "^3.5.3"
 numpy = "^1.19"
+pyproject-indirect-import-detector = "^0.1.1"
 pysen = {version = "^0.9.1", extras = ["lint"]}
 pytest = "^6.2.3"
 sphinx-theme = "^1.0"
