--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ repository = "https://github.com/Idein/actfw-gstreamer"
 version = "0.1.0"
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.6.2"
 
 # See also the comment in https://github.com/Idein/actfw-core/blob/master/pyproject.toml .
 #
@@ -38,14 +38,22 @@ numpy = [
     {version = "^1.21.3", python = ">=3.7,<3.11"}
 ]
 pyproject-indirect-import-detector = "^0.1.1"
-pysen = {version = "^0.9.1", extras = ["lint"]}
+pysen = {version = "^0.10.1"}
 pytest = "^6.2.3"
 sphinx-theme = "^1.0"
+black = "21.10b0"
+flake8 = "3.9.2"
+flake8-bugbear = "21.9.2"
+isort = "5.1.4"
+mypy = "0.790"
 
 [tool.poetry.urls]
 "Repository" = "https://github.com/Idein/actfw-gstreamer"
 "Documentation" = "https://idein.github.io/actfw-gstreamer/latest/"
 "Changelog" = "https://github.com/Idein/actfw-gstreamer/blob/master/CHANGELOG.md"
+
+[tool.pysen]
+version = "0.10"
 
 [tool.pysen.lint]
 enable_black = true
