--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ commands:
           name: poetry install
           command: |
             poetry config virtualenvs.in-project true
-            poetry install
+            poetry install --no-ansi
       - save_cache:
           key: *cache-key-poetry
           paths:
