Omit python-3.10 in test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,8 @@
 version: 2.1
 
 references:
-  python-versions: &python-versions ["3.6", "3.7", "3.8", "3.9", "3.10"]
+  # TODO: python-3.10に対するテストがtimeoutするのを解決する
+  python-versions: &python-versions ["3.6", "3.7", "3.8", "3.9"]
 
 commands:
   install-python-dev-tools:
