--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,18 +15,9 @@ repository = "https://github.com/Idein/actfw-gstreamer"
 version = "0.1.1"
 
 [tool.poetry.dependencies]
-python = "^3.6.2"
+python = "^3.7"
 
-# See also the comment in https://github.com/Idein/actfw-core/blob/master/pyproject.toml .
-#
-# The table of current versions provided by apt:
-#
-# |                             | Raspberry Pi | Jetson Nano |
-# | --------------------------- | ------------ | ----------- |
-# | pithon3-pil (Pillow)        | 5.4.1        | 5.1.0       |
-# | python3-gst-1.0 (PyGObject) | 3.30.4       | 3.26.1      |
-#
-Pillow = "^5"
+Pillow = ">=5, <11"
 PyGObject = "^3"
 actfw-core = "^2.0.0"
 result = "^0.6.0"
@@ -34,18 +25,20 @@ result = "^0.6.0"
 [tool.poetry.dev-dependencies]
 Sphinx = "^4.3.0"
 numpy = [
-    {version = "^1.19", python = "<3.7"},
-    {version = "^1.21.3", python = ">=3.7,<3.11"}
+  {version = "^1.21.3", python = ">=3.7,<3.11"},
+  {version = "^1.26.0", python = ">=3.12"},
 ]
 pyproject-indirect-import-detector = "^0.1.1"
 pysen = {version = "^0.10.1"}
 pytest = "^6.2.3"
 sphinx-theme = "^1.0"
-black = "21.10b0"
+black = "^23"
 flake8 = "3.9.2"
 flake8-bugbear = "21.9.2"
 isort = "5.1.4"
-mypy = "0.790"
+mypy = "^1"
+types-setuptools = "^69"
+types-Pillow = ">=5"
 
 [tool.poetry.urls]
 "Repository" = "https://github.com/Idein/actfw-gstreamer"
