--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,13 @@
 version: 2.1
 
 references:
-  # TODO: python-3.10に対するテストがtimeoutするのを解決する
-  python-versions: &python-versions ["3.6", "3.7", "3.8", "3.9"]
+  image-tags: &image-tags
+    - "python:3.7-buster"
+    - "python:3.8-buster"
+    - "python:3.9-bullseye"
+    - "python:3.10-bullseye"
+    - "python:3.11-bullseye"
+    - "python:3.12-bullseye"
 
 commands:
   install-python-dev-tools:
@@ -30,13 +35,13 @@ commands:
   install-old-poetry:
     steps:
       - run:
-          name: Install poetry 1.1
+          name: Install poetry 1.5.1
           command: |
             python3 -m pip install --user pipx
             python3 -m pipx ensurepath
             echo 'export PATH=$HOME/.local/bin:$PATH' >> $BASH_ENV
             source $BASH_ENV
-            pipx install poetry==1.1.15
+            pipx install poetry==1.5.1
   poetry-install:
     steps:
       # See: https://circleci.com/docs/2.0/language-python/#cache-dependencies
@@ -67,7 +72,7 @@ commands:
 jobs:
   lint:
     docker:
-      - image: python:3.10-buster
+      - image: python:3.10-bullseye
         auth: &docker-hub-auth
           username: $DOCKER_USER
           password: $DOCKER_PASS
@@ -87,23 +92,23 @@ jobs:
 
   test:
     parameters:
-      python-version:
+      image-tag:
         type: string
     docker:
-      - image: python:<<parameters.python-version>>-buster
+      - image: <<parameters.image-tag>>
         auth: *docker-hub-auth
     steps:
       - checkout
       - install-python-dev-tools
       - when:
           condition:
-            equal: ["3.6", << parameters.python-version >> ]
+            equal: ["python:3.6-buster", << parameters.image-tag >>]
           steps:
             - install-old-poetry
       - when:
           condition:
             not:
-              equal: ["3.6", << parameters.python-version >> ]
+              equal: ["python:3.6-buster", << parameters.image-tag >>]
           steps:
             - install-poetry
       - poetry-install
@@ -112,10 +117,10 @@ jobs:
           command: poetry run pytest -v
   test-with-up-to-date-dependencies:
     parameters:
-      python-version:
+      image-tag:
         type: string
     docker:
-      - image: python:<<parameters.python-version>>-buster
+      - image: <<parameters.image-tag>>
         auth: *docker-hub-auth
     steps:
       - checkout
@@ -125,13 +130,13 @@ jobs:
       - install-python-dev-tools
       - when:
           condition:
-            equal: ["3.6", << parameters.python-version >> ]
+            equal: ["python:3.6-buster", << parameters.image-tag >>]
           steps:
             - install-old-poetry
       - when:
           condition:
             not:
-              equal: ["3.6", << parameters.python-version >> ]
+              equal: ["python:3.6-buster", << parameters.image-tag >>]
           steps:
             - install-poetry
       - poetry-install
@@ -141,7 +146,7 @@ jobs:
 
   build-api-doc:
     docker:
-      - image: python:3.10-buster
+      - image: python:3.10-bullseye
         auth: *docker-hub-auth
     steps:
       - checkout
@@ -156,13 +161,13 @@ jobs:
           root: build/sphinx
           paths:
             - html
-      - store_artifacts:  # for reviewers to check generated doc
+      - store_artifacts: # for reviewers to check generated doc
           path: build/sphinx/html
           destination: html
 
   build-package:
     docker:
-      - image: python:3.10-buster
+      - image: python:3.10-bullseye
         auth: *docker-hub-auth
     steps:
       - checkout
@@ -180,7 +185,7 @@ jobs:
 
   validate-version-with-tag:
     docker:
-      - image: python:3.10-buster
+      - image: python:3.10-bullseye
         auth: *docker-hub-auth
     steps:
       - checkout
@@ -225,7 +230,7 @@ jobs:
 
   deploy-package:
     docker:
-      - image: python:3.10-buster
+      - image: python:3.10-bullseye
         auth: *docker-hub-auth
     steps:
       - checkout
@@ -252,7 +257,7 @@ workflows:
             - docker-hub-creds
           matrix:
             parameters:
-              python-version: *python-versions
+              image-tag: *image-tags
       - build-api-doc:
           context:
             - docker-hub-creds
@@ -296,7 +301,7 @@ workflows:
   nightly:
     triggers:
       - schedule:
-          cron: "41 23 * * *"  # in UTC
+          cron: "41 23 * * *" # in UTC
           filters:
             branches:
               only:
@@ -310,13 +315,13 @@ workflows:
             - docker-hub-creds
           matrix:
             parameters:
-              python-version: *python-versions
+              image-tag: *image-tags
       - test-with-up-to-date-dependencies:
           context:
             - docker-hub-creds
           matrix:
             parameters:
-              python-version: *python-versions
+              image-tag: *image-tags
       - build-api-doc:
           context:
             - docker-hub-creds
